* TIP admonition is now designed as Bootstrap alert-info block.
* Open Blocks allows to write blog, releases or features pages.
* Ability to use all Pygments styles (globally or locally).
* Add an inline macro to represent an icon.
* Add Cerulean theme from Bootswatch template provider.
* Add backend build signature in text footer.

.Bug fixes:
* none

== Version 3.0.1 _(2013-11-14)_

.Additions and changes:
* add new attribute `bootstrap-backend-version` (latest version) and include it in the generator meta tag
* uses Bootstrap 3 template as default engine (attribute `bsver` sets on value 3)

.Bug fixes:
* better alignement between text and badges on default footer.
* images generated by plantuml filter are now responsive.
* fix resources embedded for stand-alone documents.

== Version 3.0.0 _(2013-11-03)_

.Additions and changes:
* First version to support both Bootstrap 2 and 3 and template theme system.
* badges and footnotes are back
* table of contents used the default _asciidoc.js_ file and allow start and side positionment
* add links button support

.Bug fixes:
* none

== Version 2.1.0 _(2013-10-15)_

.Additions and changes:
* Add new `brandver` attribute to support a versions dropdown menu in the navinfo.html

.Bug fixes:
* none

== Version 2.0.0 _(2013-10-14)_

.Additions and changes:
* Support the latest Bootstrap 2.x version (2.3.2).
Included in this distribution.
* Support the latest jQuery 1.x version (1.10.2).
Included in this distribution.
* Support http://mattvarone.com/web-design/uitotop-jquery-plugin/[UItoTop jQuery plugin].
Included in this distribution.

.Bug fixes:
* none

== Version 1.3.0 _(2013-01-21)_

.Additions and changes:
* Support three attributes `navinfo`, `navinfo1`, `navinfo2` to control which
navigation information files will be included in the the header of the output file.
See link:document-structure.html[Document Structure] chapter.
* Support `footer` attribute to control which informations will be included in the output file.