@@ -1,4 +1,5 @@
                         <li><a tabindex="-1" href="../../current/en/index.html">current</a></li>
+                        <li><a tabindex="-1" href="../../3.1/en/index.html">3.1</a></li>
                         <li><a tabindex="-1" href="../../3.0/en/index.html">3.0</a></li>
                         <li><a tabindex="-1" href="../../2.1/en/index.html">2.1</a></li>
                         <li><a tabindex="-1" href="../../2.0/en/index.html">2.0</a></li>
