@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v3.0.1 by @fat and @mdo
+ * Bootstrap v3.0.2 by @fat and @mdo
  * Copyright 2013 Twitter, Inc.
  * Licensed under http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -996,6 +996,10 @@ pre code {
   right: 8.333333333333332%;
 }
 
+.col-xs-pull-0 {
+  right: 0;
+}
+
 .col-xs-push-12 {
   left: 100%;
 }
@@ -1044,6 +1048,10 @@ pre code {
   left: 8.333333333333332%;
 }
 
+.col-xs-push-0 {
+  left: 0;
+}
+
 .col-xs-offset-12 {
   margin-left: 100%;
 }
@@ -1090,6 +1098,10 @@ pre code {
 
 .col-xs-offset-1 {
   margin-left: 8.333333333333332%;
+}
+
+.col-xs-offset-0 {
+  margin-left: 0;
 }
 
 @media (min-width: 768px) {
@@ -1181,6 +1193,9 @@ pre code {
   .col-sm-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-sm-pull-0 {
+    right: 0;
+  }
   .col-sm-push-12 {
     left: 100%;
   }
@@ -1217,6 +1232,9 @@ pre code {
   .col-sm-push-1 {
     left: 8.333333333333332%;
   }
+  .col-sm-push-0 {
+    left: 0;
+  }
   .col-sm-offset-12 {
     margin-left: 100%;
   }
@@ -1252,6 +1270,9 @@ pre code {
   }
   .col-sm-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-sm-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1344,6 +1365,9 @@ pre code {
   .col-md-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-md-pull-0 {
+    right: 0;
+  }
   .col-md-push-12 {
     left: 100%;
   }
@@ -1380,6 +1404,9 @@ pre code {
   .col-md-push-1 {
     left: 8.333333333333332%;
   }
+  .col-md-push-0 {
+    left: 0;
+  }
   .col-md-offset-12 {
     margin-left: 100%;
   }
@@ -1415,6 +1442,9 @@ pre code {
   }
   .col-md-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-md-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1507,6 +1537,9 @@ pre code {
   .col-lg-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-lg-pull-0 {
+    right: 0;
+  }
   .col-lg-push-12 {
     left: 100%;
   }
@@ -1543,6 +1576,9 @@ pre code {
   .col-lg-push-1 {
     left: 8.333333333333332%;
   }
+  .col-lg-push-0 {
+    left: 0;
+  }
   .col-lg-offset-12 {
     margin-left: 100%;
   }
@@ -1578,6 +1614,9 @@ pre code {
   }
   .col-lg-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-lg-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1882,22 +1921,6 @@ output {
   vertical-align: middle;
 }
 
-.form-control:-moz-placeholder {
-  color: #999999;
-}
-
-.form-control::-moz-placeholder {
-  color: #999999;
-}
-
-.form-control:-ms-input-placeholder {
-  color: #999999;
-}
-
-.form-control::-webkit-input-placeholder {
-  color: #999999;
-}
-
 .form-control {
   display: block;
   width: 100%;
@@ -1922,6 +1945,22 @@ output {
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+
+.form-control:-moz-placeholder {
+  color: #999999;
+}
+
+.form-control::-moz-placeholder {
+  color: #999999;
+}
+
+.form-control:-ms-input-placeholder {
+  color: #999999;
+}
+
+.form-control::-webkit-input-placeholder {
+  color: #999999;
 }
 
 .form-control[disabled],
