@@ -1074,6 +1074,10 @@ pre code {
   right: 8.333333333333332%;
 }
 
+.col-xs-pull-0 {
+  right: 0;
+}
+
 .col-xs-push-12 {
   left: 100%;
 }
@@ -1122,6 +1126,10 @@ pre code {
   left: 8.333333333333332%;
 }
 
+.col-xs-push-0 {
+  left: 0;
+}
+
 .col-xs-offset-12 {
   margin-left: 100%;
 }
@@ -1168,6 +1176,10 @@ pre code {
 
 .col-xs-offset-1 {
   margin-left: 8.333333333333332%;
+}
+
+.col-xs-offset-0 {
+  margin-left: 0;
 }
 
 @media (min-width: 768px) {
@@ -1259,6 +1271,9 @@ pre code {
   .col-sm-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-sm-pull-0 {
+    right: 0;
+  }
   .col-sm-push-12 {
     left: 100%;
   }
@@ -1295,6 +1310,9 @@ pre code {
   .col-sm-push-1 {
     left: 8.333333333333332%;
   }
+  .col-sm-push-0 {
+    left: 0;
+  }
   .col-sm-offset-12 {
     margin-left: 100%;
   }
@@ -1330,6 +1348,9 @@ pre code {
   }
   .col-sm-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-sm-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1422,6 +1443,9 @@ pre code {
   .col-md-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-md-pull-0 {
+    right: 0;
+  }
   .col-md-push-12 {
     left: 100%;
   }
@@ -1458,6 +1482,9 @@ pre code {
   .col-md-push-1 {
     left: 8.333333333333332%;
   }
+  .col-md-push-0 {
+    left: 0;
+  }
   .col-md-offset-12 {
     margin-left: 100%;
   }
@@ -1493,6 +1520,9 @@ pre code {
   }
   .col-md-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-md-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1585,6 +1615,9 @@ pre code {
   .col-lg-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-lg-pull-0 {
+    right: 0;
+  }
   .col-lg-push-12 {
     left: 100%;
   }
@@ -1621,6 +1654,9 @@ pre code {
   .col-lg-push-1 {
     left: 8.333333333333332%;
   }
+  .col-lg-push-0 {
+    left: 0;
+  }
   .col-lg-offset-12 {
     margin-left: 100%;
   }
@@ -1656,6 +1692,9 @@ pre code {
   }
   .col-lg-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-lg-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1960,22 +1999,6 @@ output {
   vertical-align: middle;
 }
 
-.form-control:-moz-placeholder {
-  color: #acb6c0;
-}
-
-.form-control::-moz-placeholder {
-  color: #acb6c0;
-}
-
-.form-control:-ms-input-placeholder {
-  color: #acb6c0;
-}
-
-.form-control::-webkit-input-placeholder {
-  color: #acb6c0;
-}
-
 .form-control {
   display: block;
   width: 100%;
@@ -2000,6 +2023,22 @@ output {
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(26, 188, 156, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(26, 188, 156, 0.6);
+}
+
+.form-control:-moz-placeholder {
+  color: #acb6c0;
+}
+
+.form-control::-moz-placeholder {
+  color: #acb6c0;
+}
+
+.form-control:-ms-input-placeholder {
+  color: #acb6c0;
+}
+
+.form-control::-webkit-input-placeholder {
+  color: #acb6c0;
 }
 
 .form-control[disabled],
@@ -7456,23 +7495,28 @@ td.visible-print {
           box-shadow: none;
 }
 
-.text-primary {
+.text-primary,
+.text-primary:hover {
   color: #2c3e50;
 }
 
-.text-success {
+.text-success,
+.text-success:hover {
   color: #18bc9c;
 }
 
-.text-danger {
+.text-danger,
+.text-danger:hover {
   color: #e74c3c;
 }
 
-.text-warning {
+.text-warning,
+.text-warning:hover {
   color: #f39c12;
 }
 
-.text-info {
+.text-info,
+.text-info:hover {
   color: #3498db;
 }
 
