@@ -1,5 +1,5 @@
 /*
-   Bootstrap backend styles shared with Bootswatch Readable theme
+   Bootstrap backend styles shared with Bootswatch Flatly theme
 */
 
 .jumbotron-fullwidth   {
