@@ -1,3 +1,3 @@
 /*
-   Your custom preferences for this AsciiDoc shared with Bootswatch Readable theme
+   Your custom preferences for this AsciiDoc shared with Bootswatch Flatly theme
 */
