@@ -1074,6 +1074,10 @@ pre code {
   right: 8.333333333333332%;
 }
 
+.col-xs-pull-0 {
+  right: 0;
+}
+
 .col-xs-push-12 {
   left: 100%;
 }
@@ -1122,6 +1126,10 @@ pre code {
   left: 8.333333333333332%;
 }
 
+.col-xs-push-0 {
+  left: 0;
+}
+
 .col-xs-offset-12 {
   margin-left: 100%;
 }
@@ -1168,6 +1176,10 @@ pre code {
 
 .col-xs-offset-1 {
   margin-left: 8.333333333333332%;
+}
+
+.col-xs-offset-0 {
+  margin-left: 0;
 }
 
 @media (min-width: 768px) {
@@ -1259,6 +1271,9 @@ pre code {
   .col-sm-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-sm-pull-0 {
+    right: 0;
+  }
   .col-sm-push-12 {
     left: 100%;
   }
@@ -1295,6 +1310,9 @@ pre code {
   .col-sm-push-1 {
     left: 8.333333333333332%;
   }
+  .col-sm-push-0 {
+    left: 0;
+  }
   .col-sm-offset-12 {
     margin-left: 100%;
   }
@@ -1330,6 +1348,9 @@ pre code {
   }
   .col-sm-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-sm-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1422,6 +1443,9 @@ pre code {
   .col-md-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-md-pull-0 {
+    right: 0;
+  }
   .col-md-push-12 {
     left: 100%;
   }
@@ -1458,6 +1482,9 @@ pre code {
   .col-md-push-1 {
     left: 8.333333333333332%;
   }
+  .col-md-push-0 {
+    left: 0;
+  }
   .col-md-offset-12 {
     margin-left: 100%;
   }
@@ -1493,6 +1520,9 @@ pre code {
   }
   .col-md-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-md-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1585,6 +1615,9 @@ pre code {
   .col-lg-pull-1 {
     right: 8.333333333333332%;
   }
+  .col-lg-pull-0 {
+    right: 0;
+  }
   .col-lg-push-12 {
     left: 100%;
   }
@@ -1621,6 +1654,9 @@ pre code {
   .col-lg-push-1 {
     left: 8.333333333333332%;
   }
+  .col-lg-push-0 {
+    left: 0;
+  }
   .col-lg-offset-12 {
     margin-left: 100%;
   }
@@ -1656,6 +1692,9 @@ pre code {
   }
   .col-lg-offset-1 {
     margin-left: 8.333333333333332%;
+  }
+  .col-lg-offset-0 {
+    margin-left: 0;
   }
 }
 
@@ -1960,22 +1999,6 @@ output {
   vertical-align: middle;
 }
 
-.form-control:-moz-placeholder {
-  color: #999999;
-}
-
-.form-control::-moz-placeholder {
-  color: #999999;
-}
-
-.form-control:-ms-input-placeholder {
-  color: #999999;
-}
-
-.form-control::-webkit-input-placeholder {
-  color: #999999;
-}
-
 .form-control {
   display: block;
   width: 100%;
@@ -2000,6 +2023,22 @@ output {
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+
+.form-control:-moz-placeholder {
+  color: #999999;
+}
+
+.form-control::-moz-placeholder {
+  color: #999999;
+}
+
+.form-control:-ms-input-placeholder {
+  color: #999999;
+}
+
+.form-control::-webkit-input-placeholder {
+  color: #999999;
 }
 
 .form-control[disabled],
@@ -7468,6 +7507,7 @@ td.visible-print {
   background-repeat: no-repeat;
   border: 1px solid #1a1a1a;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4d4d4d', endColorstr='#ff292929', GradientType=0);
+  filter: none;
 }
 
 .btn-primary,
@@ -7479,6 +7519,7 @@ td.visible-print {
   background-repeat: no-repeat;
   border: 1px solid #3071a9;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6aa3d5', endColorstr='#ff3681c1', GradientType=0);
+  filter: none;
 }
 
 .btn-success,
@@ -7490,6 +7531,7 @@ td.visible-print {
   background-repeat: no-repeat;
   border: 1px solid #449d44;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff80c780', endColorstr='#ff4eb24e', GradientType=0);
+  filter: none;
 }
 
 .btn-info,
@@ -7501,6 +7543,7 @@ td.visible-print {
   background-repeat: no-repeat;
   border: 1px solid #31b0d5;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff85d0e7', endColorstr='#ff4ab9db', GradientType=0);
+  filter: none;
 }
 
 .btn-warning,
@@ -7512,6 +7555,7 @@ td.visible-print {
   background-repeat: no-repeat;
   border: 1px solid #ec971f;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff4c37d', endColorstr='#ffeea43b', GradientType=0);
+  filter: none;
 }
 
 .btn-danger,
@@ -7523,6 +7567,7 @@ td.visible-print {
   background-repeat: no-repeat;
   border: 1px solid #c9302c;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe27c79', endColorstr='#ffd5433e', GradientType=0);
+  filter: none;
 }
 
 .pagination .active > a,
