@@ -9,3 +9,25 @@
     padding: 0.5em;
     border-radius: 4px;
 }
+ 
+/* delimited-blocks: openblock demo examples */
+.openblock {
+    border: 1px dashed;
+    height: 200px;
+    background-color: #fff;
+    padding: 0.2em;
+}
+.timeline > .title {
+    background-color: blue;
+    color: white;
+    padding: 20px 20px;
+    text-align: center;
+    margin: 0;
+}
+.timeline > .content  {
+    padding: 40px 20px;
+}
+.timeline > .content > p > strong {
+    font-size: 30px;
+    color: navy;
+}
